feat: Padronização de exception messages por variaveis estáticas e enum de domains