@@ -6,6 +6,8 @@ import geo.track.domain.Oficinas;
 import geo.track.dto.clientes.request.RequestPostCliente;
 import geo.track.exception.ConflictException;
 import geo.track.exception.DataNotFoundException;
+import geo.track.exception.constraint.message.ClienteExceptionMessages;
+import geo.track.exception.constraint.message.EnumDomains;
 import geo.track.mapper.ClientesMapper;
 import geo.track.repository.ClienteRepository;
 import geo.track.dto.clientes.request.RequestPatchEmail;
@@ -24,7 +26,9 @@ public class ClienteService {
     private final EnderecoService ENDERECO_SERVICE;
 
     public Cliente postCliente(RequestPostCliente body){
-        if(CLIENTE_REPOSITORY.existsByCpfCnpj(body.getCpfCnpj())){throw new ConflictException("O CPF do cliente informado já existe", "Clientes");}
+        if(CLIENTE_REPOSITORY.existsByCpfCnpj(body.getCpfCnpj())){
+            throw new ConflictException(ClienteExceptionMessages.CPF_EXISTENTE, EnumDomains.CLIENTE);
+        }
         Oficinas oficina = OFICINA_SERVICE.findOficinasById(body.getFkOficina());
         Endereco endereco = ENDERECO_SERVICE.findEnderecoById(body.getFkEndereco());
 
@@ -41,7 +45,7 @@ public class ClienteService {
 
 
         if (cliente.isEmpty()) {
-            throw new DataNotFoundException("O ID %d não foi encontrado".formatted(id), "Clientes");
+            throw new DataNotFoundException(String.format(ClienteExceptionMessages.CLIENTE_NAO_ENCONTRADO_ID, id), EnumDomains.CLIENTE);
         }
 
         return cliente.get();
@@ -52,7 +56,7 @@ public class ClienteService {
         List<Cliente> cliente = CLIENTE_REPOSITORY.findByNomeContainingIgnoreCase(nome);
 
         if (cliente.isEmpty()) {
-            throw new DataNotFoundException("O nome %s não foi encontrado".formatted(nome), "Clientes");
+            throw new DataNotFoundException(String.format(ClienteExceptionMessages.CLIENTE_NAO_ENCONTRADO_NOME, nome), EnumDomains.CLIENTE);
         }
         return cliente;
     }
@@ -61,7 +65,7 @@ public class ClienteService {
         Optional<Cliente> cliente = CLIENTE_REPOSITORY.findByCpfCnpj(cpfCnpj);
 
         if (cliente.isEmpty()) {
-            throw new DataNotFoundException("CPF %s não foi encontrado".formatted(cpfCnpj), "Clientes");
+            throw new DataNotFoundException(String.format(ClienteExceptionMessages.CLIENTE_NAO_ENCONTRADO_CPF_CNPJ, cpfCnpj), EnumDomains.CLIENTE);
         }
         return cliente.get();
     }
@@ -70,7 +74,7 @@ public class ClienteService {
         Optional<Cliente> clientes = CLIENTE_REPOSITORY.findById(clienteDTO.getId());
 
         if(clientes.isEmpty()){
-            throw new DataNotFoundException("Não existe cliente com esse ID", "Veiculo");
+            throw new DataNotFoundException(ClienteExceptionMessages.CLIENTE_NAO_ENCONTRADO_ID_OU_OFICINA, EnumDomains.CLIENTE);
         }
         Cliente cliente = clientes.get();
         cliente.setIdCliente(clienteDTO.getId());
@@ -83,7 +87,7 @@ public class ClienteService {
         Optional<Cliente> clientes = CLIENTE_REPOSITORY.findById(clienteDTO.getId());
 
         if(clientes.isEmpty()){
-            throw new DataNotFoundException("Não existe cliente com esse ID", "Clientes");
+            throw new DataNotFoundException(ClienteExceptionMessages.CLIENTE_NAO_ENCONTRADO_ID_OU_OFICINA, EnumDomains.CLIENTE);
         }
 
         Cliente cliente = clientes.get();
@@ -98,7 +102,7 @@ public class ClienteService {
 
 
         if(clientes.isEmpty()){
-            throw new DataNotFoundException("Não existe cliente com esse ID", "Clientes");
+            throw new DataNotFoundException(ClienteExceptionMessages.CLIENTE_NAO_ENCONTRADO_ID_OU_OFICINA, EnumDomains.CLIENTE);
         }
 
             Cliente cliente = clientes.get();
@@ -119,9 +123,6 @@ public class ClienteService {
             CLIENTE_REPOSITORY.deleteById(id);
             return;
         }
-        throw new DataNotFoundException("O ID %d não foi encontrado".formatted(id), "Clientes");
+        throw new DataNotFoundException(String.format(ClienteExceptionMessages.CLIENTE_NAO_ENCONTRADO_ID, id), EnumDomains.CLIENTE);
     }
 }
-
-
-
